Bug 20183 - There are misprints in the spec for "Creating paths and manipulating path data" group
Summary: There are misprints in the spec for "Creating paths and manipulating path dat...
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: general (show other bugs)
Version: 1.8.6
Hardware: All All
: medium normal
Assignee: Carl Worth
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-18 01:52 UTC by Truc Truong
Modified: 2009-06-03 02:51 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Truc Truong 2009-02-18 01:52:45 UTC
- In the spec for cairo_get_current_point(), there is a reference to the function cairo_stroke_to_path() but there isn't any specification for it in the standard and there isn't any declaration or implementation for it in the Cairo library source code.

So, according to us, this reference should be removed.

- In the spec for cairo_copy_path(), the standard states:
"This function will always return a valid pointer, but the result will have no data (data==NULL and num_data==0), if either of the following conditions hold: 
1.If there is insufficient memory to copy the path. In this case path->status will be set to CAIRO_STATUS_NO_MEMORY. 
2.If cr is already in an error state. In this case path->status will contain the same status that would be returned by cairo_status(). 

In either case, path->status will be set to CAIRO_STATUS_NO_MEMORY (regardless of what the error status in cr might have been)."

The sentence "In either case, path->status will be set to CAIRO_STATUS_NO_MEMORY (regardless of what the error status in cr might have been)" looks like redundant and opposite meaning with other parts of spec. This sentence should be removed.

Please give us your decision.

Thank you very much for your time.
Comment 1 Chris Wilson 2009-06-03 02:51:58 UTC
Fixed, thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.