[cairo] Doc typo.

Fix conflicting sentence as pointed out by
https://bugs.freedesktop.org/show_bug.cgi?id=20183